commit 0.56 Added TaskProcess